2005-02-25  Carl Worth  <cworth@cworth.org>

	From David Reveman:
	
	* src/cairo_gstate.c (_cairo_gstate_show_surface): Simplify code
	to eliminate a goto.

2005-02-25  Carl Worth  <cworth@cworth.org>

	From David Reveman:
	
	* src/cairo_gstate.c (_cairo_gstate_pattern_init_copy):
	(_cairo_gstate_clip_and_composite_trapezoids) 
	(_cairo_gstate_clip_and_composite_trapezoids) 
	(_cairo_gstate_show_surface, _cairo_gstate_show_glyphs) 
	(_cairo_gstate_show_glyphs): Clean up the mess that was
	the misnamed _cairo_gstate_create_pattern.

2005-02-25  Carl Worth  <cworth@cworth.org>

	* src/cairo_pattern.c (_cairo_pattern_shader_init): Don't put an
	off-by-one n_stops into cairo_shader_op_t.
	(_cairo_shader_op_find_color_stops): Put search for two color
	stops containing a given offset into its own function. Handle the
	case of before first and after last stop by returning the nearest
	stop twice.
	(_cairo_pattern_calc_color_at_pixel): Handle case of no color
	stops by returning a transparent pixel.

2005-02-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_surface.c: Remove a left-over debug printf.

2005-02-24  Carl Worth  <cworth@cworth.org>

	* src/cairo_pattern.c (cairo_pattern_add_color_stop): Fix memory
	leak when realloc fails due to out-of-memory.

2005-02-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_surface.[ch]: Instead of counting
	on ordering deletion to work (apparently it didn't on
	older Windows), save the initial bitmap created
	with the DC and reselect that into the DC. (Based
	on a patch by Hans Breuer)

2005-02-24  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore: Add pixman_rotate to ignore list.

2005-02-24  Carl Worth  <cworth@cworth.org>

	Fixes from David Reveman with minor cleanups by Carl Worth:

	* src/cairo_gstate.c (_cairo_gstate_create): Handle new failure
	possibility of _cairo_gstate_init.
	(_cairo_gstate_init): Handle possible failure of
	_cairo_pattern_create_solid.